libs/@local/hashql/ast/tests/ui/lowering/type-extractor/definition/global-generic-constraint-too-many.jsonc
//@ run: fail
//@ description: TODO
[
  "type",
  "Foo",
  "Some<String, Number>",
  //~^ ERROR Remove this parameter
  "_"
]
